[package]
name = "hyperloop_relaynode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-traits = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
web3 = "0.19.0"
hex = "0.4"
blst = "0.3.11"
ethers = "2.0"
ethers-solc = "2.0.14"
ed25519-dalek = "2.1.1"
hex-literal = "0.4"
regex = "1.5"