[package]
name = "hyperloop_relaynode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-traits = "0.2"
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.116"
hex = "0.4"
regex = "1.5"
ed25519-dalek = "2.1.1"
web3 = "0.19.0"
ethers = "2.0"
ethabi= "18.0.0"

[[bin]]
name = "main"
path = "src/main.rs"